// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenTasksByDate component Function filterTasksByDate snapshot test should execute and render correctly 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingTop": 24,
        },
        Object {
          "paddingBottom": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFBFB",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 24,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#EBF5FF",
            "borderRadius": 4,
            "height": 24,
            "position": "absolute",
            "width": "0%",
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#04142F",
              "fontFamily": "Roboto-Regular",
              "fontSize": 11,
              "letterSpacing": 1.5,
              "lineHeight": 20,
            },
            Object {
              "color": "#4E5D78",
              "paddingLeft": 12,
              "zIndex": 1,
            },
          ]
        }
      >
        TODAY • 1 POINTS
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "justifyContent": "center",
          "marginLeft": -16,
          "marginRight": -16,
        },
        undefined,
      ]
    }
  >
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderRadius": 4,
          "transform": Array [
            Object {
              "translateX": 0,
            },
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginHorizontal": 8,
              "paddingHorizontal": 8,
            },
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#007FFF",
                    "fontFamily": "alldone",
                    "fontSize": 24,
                    "opacity": 1,
                  }
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexGrow": 1,
                  "paddingLeft": 12,
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              onLayout={[Function]}
              onPress={[Function]}
              style={
                Array [
                  Array [
                    Object {
                      "color": "#04142F",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.32,
                      "lineHeight": 24,
                    },
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "paddingBottom": 12,
                      "paddingTop": 12,
                    },
                    Object {
                      "color": "#8A94A6",
                    },
                    undefined,
                    undefined,
                  ],
                  Object {
                    "flexDirection": "row",
                    "textAlignVertical": "center",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {},
                      undefined,
                      Object {
                        "marginLeft": 0,
                      },
                    ]
                  }
                >
                  Type
                   
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {},
                      undefined,
                      undefined,
                    ]
                  }
                >
                  to
                   
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {},
                      undefined,
                      undefined,
                    ]
                  }
                >
                  add
                   
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {},
                      undefined,
                      undefined,
                    ]
                  }
                >
                  new
                   
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {},
                      undefined,
                      undefined,
                    ]
                  }
                >
                  task
                  
                </Text>
              </View>
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "paddingBottom": 12,
                "paddingTop": 12,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`OpenTasksByDate component Function updateProgressBar snapshot test should execute and render correctly 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingTop": 24,
        },
        Object {
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FAFBFB",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#EBF5FF",
            "borderRadius": 4,
            "height": 24,
            "position": "absolute",
            "width": "0%",
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#04142F",
              "fontFamily": "Roboto-Regular",
              "fontSize": 11,
              "letterSpacing": 1.5,
              "lineHeight": 20,
            },
            Object {
              "color": "#4E5D78",
              "paddingLeft": 12,
              "zIndex": 1,
            },
          ]
        }
      >
        TODAY • MONDAY
      </Text>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "space-between",
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#EAFFF8",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": "100%",
            "paddingLeft": 12,
            "width": "50%",
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#00C282",
                "fontFamily": "alldone",
                "fontSize": 18,
                "opacity": 1,
              }
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Object {
              "marginLeft": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#04142F",
                  "fontFamily": "Roboto-Medium",
                  "fontSize": 14,
                  "letterSpacing": 0.16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#00C282",
                },
              ]
            }
          >
            Details
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFF6EB",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": "100%",
            "paddingRight": 12,
            "width": "50%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": "auto",
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#FFAE47",
                  "fontFamily": "alldone",
                  "fontSize": 18,
                  "opacity": 1,
                }
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "marginLeft": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#04142F",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 14,
                    "letterSpacing": 0.16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#FFAE47",
                  },
                ]
              }
            >
              Reminder
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        Object {
          "overflow": "visible",
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "width": 150,
            }
          }
        />
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "flexDirection": "row-reverse",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "width": 150,
            }
          }
        />
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateX": -0,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "center",
              "marginLeft": -16,
              "marginRight": -16,
            }
          }
        >
          <View
            style={
              Object {
                "borderRadius": 4,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "alignItems": "flex-start",
                  "backgroundColor": "rgba(255, 255, 255, 1)",
                  "borderRadius": 4,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginHorizontal": 8,
                  "paddingHorizontal": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  accessible={false}
                  focusable={true}
                  isTVSelectable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <View>
                    <Text
                      style={
                        Object {
                          "color": "#007FFF",
                          "fontFamily": "alldone",
                          "fontSize": 24,
                          "opacity": 1,
                        }
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "flexGrow": 1,
                        "paddingLeft": 12,
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    onLayout={[Function]}
                    onPress={[Function]}
                    style={
                      Array [
                        Array [
                          Object {
                            "color": "#04142F",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.32,
                            "lineHeight": 24,
                          },
                          Object {
                            "alignItems": "center",
                            "display": "flex",
                            "paddingBottom": 8,
                            "paddingTop": 8,
                          },
                          Object {
                            "color": "#8A94A6",
                          },
                          undefined,
                          undefined,
                        ],
                        Object {
                          "flexDirection": "row",
                          "textAlignVertical": "center",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 0,
                            },
                          ]
                        }
                      >
                        Type
                        
                      </Text>
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 4.3,
                            },
                          ]
                        }
                      >
                        to
                        
                      </Text>
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 4.3,
                            },
                          ]
                        }
                      >
                        add
                        
                      </Text>
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 4.3,
                            },
                          ]
                        }
                      >
                        new
                        
                      </Text>
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 4.3,
                            },
                          ]
                        }
                      >
                        task
                        
                      </Text>
                    </View>
                  </Text>
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingBottom": 8,
                      "paddingTop": 8,
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "space-between",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#EAFFF8",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": "100%",
              "paddingLeft": 12,
              "width": "50%",
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#00C282",
                  "fontFamily": "alldone",
                  "fontSize": 18,
                  "opacity": 1,
                }
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "marginLeft": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#04142F",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 14,
                    "letterSpacing": 0.16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#00C282",
                  },
                ]
              }
            >
              Details
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#FFF6EB",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": "100%",
              "paddingRight": 12,
              "width": "50%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginLeft": "auto",
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#FFAE47",
                    "fontFamily": "alldone",
                    "fontSize": 18,
                    "opacity": 1,
                  }
                }
              >
                
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginLeft": 4,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#04142F",
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#FFAE47",
                    },
                  ]
                }
              >
                Reminder
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onLayout={[Function]}
        style={
          Object {
            "overflow": "visible",
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": -10000,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "width": 150,
              }
            }
          />
          <View
            onLayout={[Function]}
          />
        </View>
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row-reverse",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": -10000,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "width": 150,
              }
            }
          />
          <View
            onLayout={[Function]}
          />
        </View>
        <View
          collapsable={false}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          pointerEvents="auto"
          style={
            Object {
              "transform": Array [
                Object {
                  "translateX": -0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "justifyContent": "center",
                "marginLeft": -16,
                "marginRight": -16,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 4,
                }
              }
            >
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 4,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginHorizontal": 8,
                    "paddingHorizontal": 8,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    accessible={false}
                    focusable={true}
                    isTVSelectable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "#8A94A6",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          null,
                          null,
                        ]
                      }
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "flex": 1,
                          "flexGrow": 1,
                          "paddingLeft": 12,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      onLayout={[Function]}
                      onPress={[Function]}
                      style={
                        Array [
                          Array [
                            Object {
                              "color": "#04142F",
                              "fontFamily": "Roboto-Regular",
                              "fontSize": 16,
                              "letterSpacing": 0.32,
                              "lineHeight": 24,
                            },
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "paddingBottom": 8,
                              "paddingTop": 8,
                            },
                            undefined,
                            undefined,
                            undefined,
                          ],
                          Object {
                            "flexDirection": "row",
                            "textAlignVertical": "center",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 0,
                              },
                            ]
                          }
                        >
                          My
                          
                        </Text>
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 4.3,
                              },
                            ]
                          }
                        >
                          new
                          
                        </Text>
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 4.3,
                              },
                            ]
                          }
                        >
                          task
                          
                        </Text>
                      </View>
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "paddingBottom": 8,
                        "paddingTop": 8,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "space-between",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#EAFFF8",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": "100%",
              "paddingLeft": 12,
              "width": "50%",
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#00C282",
                  "fontFamily": "alldone",
                  "fontSize": 18,
                  "opacity": 1,
                }
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "marginLeft": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#04142F",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 14,
                    "letterSpacing": 0.16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#00C282",
                  },
                ]
              }
            >
              Details
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#FFF6EB",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": "100%",
              "paddingRight": 12,
              "width": "50%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginLeft": "auto",
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#FFAE47",
                    "fontFamily": "alldone",
                    "fontSize": 18,
                    "opacity": 1,
                  }
                }
              >
                
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginLeft": 4,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#04142F",
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#FFAE47",
                    },
                  ]
                }
              >
                Reminder
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onLayout={[Function]}
        style={
          Object {
            "overflow": "visible",
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": -10000,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "width": 150,
              }
            }
          />
          <View
            onLayout={[Function]}
          />
        </View>
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row-reverse",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": -10000,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "width": 150,
              }
            }
          />
          <View
            onLayout={[Function]}
          />
        </View>
        <View
          collapsable={false}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          pointerEvents="auto"
          style={
            Object {
              "transform": Array [
                Object {
                  "translateX": -0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "justifyContent": "center",
                "marginLeft": -16,
                "marginRight": -16,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 4,
                }
              }
            >
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 4,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginHorizontal": 8,
                    "paddingHorizontal": 8,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    accessible={false}
                    focusable={true}
                    isTVSelectable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "#8A94A6",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          null,
                          null,
                        ]
                      }
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "flex": 1,
                          "flexGrow": 1,
                          "paddingLeft": 12,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      onLayout={[Function]}
                      onPress={[Function]}
                      style={
                        Array [
                          Array [
                            Object {
                              "color": "#04142F",
                              "fontFamily": "Roboto-Regular",
                              "fontSize": 16,
                              "letterSpacing": 0.32,
                              "lineHeight": 24,
                            },
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "paddingBottom": 8,
                              "paddingTop": 8,
                            },
                            undefined,
                            undefined,
                            undefined,
                          ],
                          Object {
                            "flexDirection": "row",
                            "textAlignVertical": "center",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 0,
                              },
                            ]
                          }
                        >
                          later
                          
                        </Text>
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 4.3,
                              },
                            ]
                          }
                        >
                          yo
                          
                        </Text>
                      </View>
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "paddingBottom": 8,
                        "paddingTop": 8,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`OpenTasksByDate component OpenTasksByDate snapshot test should render correctly 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingTop": 24,
        },
        Object {
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FAFBFB",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#EBF5FF",
            "borderRadius": 4,
            "height": 24,
            "position": "absolute",
            "width": "0%",
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#04142F",
              "fontFamily": "Roboto-Regular",
              "fontSize": 11,
              "letterSpacing": 1.5,
              "lineHeight": 20,
            },
            Object {
              "color": "#4E5D78",
              "paddingLeft": 12,
              "zIndex": 1,
            },
          ]
        }
      >
        TODAY • MONDAY
      </Text>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "space-between",
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#EAFFF8",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": "100%",
            "paddingLeft": 12,
            "width": "50%",
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#00C282",
                "fontFamily": "alldone",
                "fontSize": 18,
                "opacity": 1,
              }
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Object {
              "marginLeft": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#04142F",
                  "fontFamily": "Roboto-Medium",
                  "fontSize": 14,
                  "letterSpacing": 0.16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#00C282",
                },
              ]
            }
          >
            Details
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFF6EB",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": "100%",
            "paddingRight": 12,
            "width": "50%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": "auto",
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#FFAE47",
                  "fontFamily": "alldone",
                  "fontSize": 18,
                  "opacity": 1,
                }
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "marginLeft": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#04142F",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 14,
                    "letterSpacing": 0.16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#FFAE47",
                  },
                ]
              }
            >
              Reminder
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        Object {
          "overflow": "visible",
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "width": 150,
            }
          }
        />
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "flexDirection": "row-reverse",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "width": 150,
            }
          }
        />
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateX": -0,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "center",
              "marginLeft": -16,
              "marginRight": -16,
            }
          }
        >
          <View
            style={
              Object {
                "borderRadius": 4,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "alignItems": "flex-start",
                  "backgroundColor": "rgba(255, 255, 255, 1)",
                  "borderRadius": 4,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginHorizontal": 8,
                  "paddingHorizontal": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  accessible={false}
                  focusable={true}
                  isTVSelectable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <View>
                    <Text
                      style={
                        Object {
                          "color": "#007FFF",
                          "fontFamily": "alldone",
                          "fontSize": 24,
                          "opacity": 1,
                        }
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "flexGrow": 1,
                        "paddingLeft": 12,
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    onLayout={[Function]}
                    onPress={[Function]}
                    style={
                      Array [
                        Array [
                          Object {
                            "color": "#04142F",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.32,
                            "lineHeight": 24,
                          },
                          Object {
                            "alignItems": "center",
                            "display": "flex",
                            "paddingBottom": 8,
                            "paddingTop": 8,
                          },
                          Object {
                            "color": "#8A94A6",
                          },
                          undefined,
                          undefined,
                        ],
                        Object {
                          "flexDirection": "row",
                          "textAlignVertical": "center",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 0,
                            },
                          ]
                        }
                      >
                        Type
                        
                      </Text>
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 4.3,
                            },
                          ]
                        }
                      >
                        to
                        
                      </Text>
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 4.3,
                            },
                          ]
                        }
                      >
                        add
                        
                      </Text>
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 4.3,
                            },
                          ]
                        }
                      >
                        new
                        
                      </Text>
                      <Text
                        numberOfLines={1}
                        style={
                          Array [
                            Object {},
                            undefined,
                            undefined,
                            Object {
                              "marginLeft": 4.3,
                            },
                          ]
                        }
                      >
                        task
                        
                      </Text>
                    </View>
                  </Text>
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingBottom": 8,
                      "paddingTop": 8,
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "space-between",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#EAFFF8",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": "100%",
              "paddingLeft": 12,
              "width": "50%",
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#00C282",
                  "fontFamily": "alldone",
                  "fontSize": 18,
                  "opacity": 1,
                }
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "marginLeft": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#04142F",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 14,
                    "letterSpacing": 0.16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#00C282",
                  },
                ]
              }
            >
              Details
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#FFF6EB",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": "100%",
              "paddingRight": 12,
              "width": "50%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginLeft": "auto",
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#FFAE47",
                    "fontFamily": "alldone",
                    "fontSize": 18,
                    "opacity": 1,
                  }
                }
              >
                
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginLeft": 4,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#04142F",
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#FFAE47",
                    },
                  ]
                }
              >
                Reminder
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onLayout={[Function]}
        style={
          Object {
            "overflow": "visible",
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": -10000,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "width": 150,
              }
            }
          />
          <View
            onLayout={[Function]}
          />
        </View>
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row-reverse",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": -10000,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "width": 150,
              }
            }
          />
          <View
            onLayout={[Function]}
          />
        </View>
        <View
          collapsable={false}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          pointerEvents="auto"
          style={
            Object {
              "transform": Array [
                Object {
                  "translateX": -0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "justifyContent": "center",
                "marginLeft": -16,
                "marginRight": -16,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 4,
                }
              }
            >
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 4,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginHorizontal": 8,
                    "paddingHorizontal": 8,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    accessible={false}
                    focusable={true}
                    isTVSelectable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "#8A94A6",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          null,
                          null,
                        ]
                      }
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "flex": 1,
                          "flexGrow": 1,
                          "paddingLeft": 12,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      onLayout={[Function]}
                      onPress={[Function]}
                      style={
                        Array [
                          Array [
                            Object {
                              "color": "#04142F",
                              "fontFamily": "Roboto-Regular",
                              "fontSize": 16,
                              "letterSpacing": 0.32,
                              "lineHeight": 24,
                            },
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "paddingBottom": 8,
                              "paddingTop": 8,
                            },
                            undefined,
                            undefined,
                            undefined,
                          ],
                          Object {
                            "flexDirection": "row",
                            "textAlignVertical": "center",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 0,
                              },
                            ]
                          }
                        >
                          My
                          
                        </Text>
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 4.3,
                              },
                            ]
                          }
                        >
                          new
                          
                        </Text>
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 4.3,
                              },
                            ]
                          }
                        >
                          task
                          
                        </Text>
                      </View>
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "paddingBottom": 8,
                        "paddingTop": 8,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "space-between",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#EAFFF8",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": "100%",
              "paddingLeft": 12,
              "width": "50%",
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#00C282",
                  "fontFamily": "alldone",
                  "fontSize": 18,
                  "opacity": 1,
                }
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "marginLeft": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#04142F",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 14,
                    "letterSpacing": 0.16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#00C282",
                  },
                ]
              }
            >
              Details
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#FFF6EB",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": "100%",
              "paddingRight": 12,
              "width": "50%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginLeft": "auto",
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#FFAE47",
                    "fontFamily": "alldone",
                    "fontSize": 18,
                    "opacity": 1,
                  }
                }
              >
                
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginLeft": 4,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#04142F",
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#FFAE47",
                    },
                  ]
                }
              >
                Reminder
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onLayout={[Function]}
        style={
          Object {
            "overflow": "visible",
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": -10000,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "width": 150,
              }
            }
          />
          <View
            onLayout={[Function]}
          />
        </View>
        <View
          style={
            Object {
              "bottom": 0,
              "flexDirection": "row-reverse",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": -10000,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "width": 150,
              }
            }
          />
          <View
            onLayout={[Function]}
          />
        </View>
        <View
          collapsable={false}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          pointerEvents="auto"
          style={
            Object {
              "transform": Array [
                Object {
                  "translateX": -0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "justifyContent": "center",
                "marginLeft": -16,
                "marginRight": -16,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 4,
                }
              }
            >
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 4,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginHorizontal": 8,
                    "paddingHorizontal": 8,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    accessible={false}
                    focusable={true}
                    isTVSelectable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "#8A94A6",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          null,
                          null,
                        ]
                      }
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "flex": 1,
                          "flexGrow": 1,
                          "paddingLeft": 12,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      onLayout={[Function]}
                      onPress={[Function]}
                      style={
                        Array [
                          Array [
                            Object {
                              "color": "#04142F",
                              "fontFamily": "Roboto-Regular",
                              "fontSize": 16,
                              "letterSpacing": 0.32,
                              "lineHeight": 24,
                            },
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "paddingBottom": 8,
                              "paddingTop": 8,
                            },
                            undefined,
                            undefined,
                            undefined,
                          ],
                          Object {
                            "flexDirection": "row",
                            "textAlignVertical": "center",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 0,
                              },
                            ]
                          }
                        >
                          later
                          
                        </Text>
                        <Text
                          numberOfLines={1}
                          style={
                            Array [
                              Object {},
                              undefined,
                              undefined,
                              Object {
                                "marginLeft": 4.3,
                              },
                            ]
                          }
                        >
                          yo
                          
                        </Text>
                      </View>
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "paddingBottom": 8,
                        "paddingTop": 8,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
